--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,8 @@ jobs:
         make install
         # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run Application
-      run: make run
+      run: | 
+          make run & sleep 5
     - name: Sleep to see if server runs
       run: sleep 5
       
